--- a/gifting-it/src/app/app.component.html
+++ b/gifting-it/src/app/app.component.html
@@ -5,11 +5,11 @@
   Gifting It
 </mat-toolbar>
 <mat-menu #mainMenu="matMenu">
-  <button mat-menu-item>
+  <button mat-menu-item routerLink="/home">
     <span>Home</span>
   </button>
   <mat-divider></mat-divider>
-  <button mat-menu-item>
+  <button mat-menu-item routerLink="/lists">
     <span>My Lists</span>
   </button>
   <button mat-menu-item>
