Added material navigation schematic; logout page; login page

--- a/gifting-it/src/app/app.component.html
+++ b/gifting-it/src/app/app.component.html
@@ -1,8 +1,8 @@
-<mat-toolbar color="primary">
+<!-- <mat-toolbar color="primary" class="main-toolbar">
   <button mat-icon-button [matMenuTriggerFor]="mainMenu" aria-label="Main menu">
     <mat-icon>menu</mat-icon>
   </button>
-  Gifting It
+  <span>Gifting It</span>
 </mat-toolbar>
 <mat-menu #mainMenu="matMenu">
   <button mat-menu-item routerLink="/home">
@@ -15,5 +15,5 @@
   <button mat-menu-item>
     <span>Logout</span>
   </button>
-</mat-menu>
+</mat-menu> -->
 <router-outlet></router-outlet>
